syntax = "proto3";

package usermgmt;

option go_package = "github.com/tech-with-moss/go-usermgmt-grpc;go_usermgmt_grpc";

service UserManagement {
  rpc CreateNewUser (NewUser) returns (UserResponse) {}
  rpc GetUser (UserId) returns (UserResponse) {}
  rpc GetUsersByName (UserName) returns (UsersResponse) {}
  rpc DeleteUser (UserId) returns (UserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {}
}

message NewUser {
  string name = 1;
  int32 age = 2;
}

message User {
  string name = 1;
  int32 age = 2;
  int32 id = 3; 
}

message UsersResponse {
  repeated User users = 1;
  bool success = 2;
  string message = 3;
}

message UserId {
  int32 id = 1;
}

message UserName {
  string name = 1;
}

message UpdateUserRequest {
  User user = 1;
}

